verify module tests (#13)
* verify module tests

* add logs

* fix pagination

* fix imports

* Ignore generated Firebase and Node files